# 2lkit

./: Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  mod.rs
src/logic/: add.rs  alias.rs  cp.rs  gen.rs  mod.rs  move.rs  newrepo.rs  restore.rs  rev.rs  rm.rs  upd.rs  view.rs
src/shell/: interactive.rs  live.rs  mod.rs  static.rs
src/structs/: maintarg.rs  mod.rs  package.rs
src/utils/: comms.rs  dl.rs  hash.rs  mod.rs  time.rs
