cargo-features = ["edition2024"]

[package]
name = "twolkit"
version = "0.1.1" # scold the user for bad usage, always regenerate on revision
edition = "2024"
description = "Maintainer utilities for 2"
repository = "https://github.com/Toxikuu/2"
license = "GPL-3.0"
readme = "README.md"
categories = [ "command line utilities" ]
keywords = [
  "two",
  "2",
  "utilities",
]

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
indicatif = "0.17.9"
sha2 = "0.10.8"
toml = "0.8.19"
ureq = "3.0.5"

[dependencies.clap]
version = "4.5.23"
features = [ "derive" ]

[dependencies.serde]
version = "1.0.216"
features = [
  "derive",
]
